@@ -22,14 +22,14 @@ repositories {
 }
 
 dependencies {
-    compile 'org.apache.commons:commons-dbcp2:2.7.0'
-    compile 'org.apache.logging.log4j:log4j-api:2.17.1'
-    compile 'org.apache.logging.log4j:log4j-core:2.17.1'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.6.0.0'
-    compile 'org.springframework:spring-beans:5.1.4.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.4.RELEASE'
+    implementation 'org.apache.commons:commons-dbcp2:2.8.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
+    implementation 'com.oracle.database.jdbc:ojdbc8:19.7.0.0'
+    implementation 'org.springframework:spring-beans:5.1.5.RELEASE'
+    implementation 'org.springframework:spring-jdbc:5.1.5.RELEASE'
 
-    compile fileTree(dir: 'lib', include: '*.jar')
+    implementation fileTree(dir: 'lib', include: '*.jar')
 }
 
 jar {
@@ -38,7 +38,7 @@ jar {
             'Built-By': System.getProperty('user.name'),
             'Built-Date': new Date(),
             'Built-JDK': System.getProperty('java.version'),
-            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+            'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
             'Main-Class': mainClassName
         )
     }
@@ -46,7 +46,7 @@ jar {
 
 distributions {
     main {
-        baseName = myAppName
+        distributionBaseName = myAppName
     }
 }
 
